# edu-core-api

./: README.md  pyproject.toml
config/: urls.py
