[project]
name = "edu-core-api"
version = "0.1.0"
description = "Edu Core API — бэкенд для образовательных платформ (Django REST Framework)"
authors = [
    {name = "alexander vagin",email = "sashavagin1987@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2,<6.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "psycopg2-binary (>=2.9,<3.0)",
    "python-dotenv (>=1.0,<2.0)",
    "drf-yasg (>=1.21,<2.0)",
    "djangorestframework-simplejwt (>=5.4,<6.0)",
    "django-cors-headers (>=4.6,<5.0)",
    "pillow (>=10.0,<12.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
black = "^25.9.0"

